# pn532-lib

./: README.md  pn532.c  pn532.h  pn532_pico.c  pn532_pico.h
examples/pico-i2c-felica/: CMakeLists.txt  pico-i2c-felica.c
